Made comment vote buttons bigger on mobile fixes #621

--- a/static-src/scss/components/_comments.scss
+++ b/static-src/scss/components/_comments.scss
@@ -88,6 +88,13 @@ $author-image-size: 37px;
         }
     }
 
+    .comment-vote-up,
+    .comment-vote-down, & i {
+        @media screen and (max-width: $mobile-breakpoint) {
+            @include rem(font-size, 20px);
+        }
+    }
+
     .comment-vote-up {
         @include rem(margin-right, 15px);
 
